--- a/#style.css
+++ b/#style.css
@@ -1,3 +1,9 @@
+*{
+    padding: 0;
+    margin: 0;
+}
+
+
 .presentacion {
     display:flex;
     align-items: center;
@@ -6,6 +12,15 @@
     gap: 82px;
 }
 
+body {
+    background: color #1e1e1e; 
+    color: #f6f6f6;
+    box-sizing: border-box;
+}
+
 .presentacion_imagen {
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
