--- a/#style.css
+++ b/#style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -23,4 +24,12 @@ body {
     display: flex;
     flex-direction: column;
     gap: 40px;
+
+}
+
+.presentacion_contenido_titulo{
+    font-size: 2.25rem;
+    font-weight: 400;
+    font-family: "Krona One", sans-serif;
+    font-style: normal;
 }
